--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ tokio = { version = "1.3.70", features = ["full"] }
 tokio-native-tls = "0.3.1"
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter", "std"] }
-regex = "1.10.4"
+regex = "1.10.5"
 askama = "0.12.1"
 tower = {version = "0.4.13", features = ["full"]}
 tower-http = {version = "0.5.2", features = ["full"]}
@@ -20,4 +20,4 @@ async-trait = "0.1.80"
 once_cell = "1.19.0"
 percent-encoding = "2.3.1"
 tracing-appender = "0.2.3"
-futures = "0.3.30"
+base64 = "0.22.1"
